Modal overlapping fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -445,7 +445,7 @@ div.success_menu ul.common_slider_class li {
 /* =================================
         Banner Area Start
 =================================== */
-#banner {
+.home_banner {
   background: url(../images/home//banner_bg.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -453,17 +453,15 @@ div.success_menu ul.common_slider_class li {
   padding-top: 142px;
   padding-bottom: 203px;
   position: relative;
-  z-index: 0;
+  clear: both;
 }
-
-#banner .red_shadow {
+.home_banner .red_shadow {
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
 }
-
-#banner .green_shadow {
+.home_banner .green_shadow {
   position: absolute;
   right: 0;
   top: 10%;
